# scrape-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/scrape_check/: __init__.py  __main__.py  analyze.py  batch.py  cli.py  fetch.py  models.py  recommend.py  report.py
src/scrape_check/checks/: antibot.py  http_info.py  rendering.py  robots.py
tests/: test_antibot.py  test_batch.py  test_cli.py  test_recommend.py  test_rendering.py  test_robots.py
