[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrape-check"
version = "0.2.0"
description = "Profile any URL for scrapability: robots.txt, anti-bot stack, rendering mode, and a recommendation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "python-web-scraping.com", email = "info@python-web-scraping.com" }]
keywords = [
    "web-scraping",
    "scraping",
    "python",
    "robots-txt",
    "anti-bot",
    "bot-detection",
    "waf",
    "cloudflare",
    "akamai",
    "datadome",
    "cdn-detection",
    "crawler",
    "cli",
    "batch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://python-web-scraping.com"
Repository = "https://github.com/python-web-scraping-com/scrape-check"
Issues = "https://github.com/python-web-scraping-com/scrape-check/issues"

[project.scripts]
scrape-check = "scrape_check.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scrape_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
